--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,18 @@
 # Project-wide Gradle settings.
-VERSION_NAME=4.9.0-SNAPSHOT
+VERSION_NAME=4.8.0
+GROUP=com.mapbox.mapboxsdk
+
+POM_URL=https://github.com/mapbox/mapbox-java
+POM_SCM_URL=https://github.com/mapbox/mapbox-java
+POM_SCM_CONNECTION=scm:git@github.com:mapbox/mapbox-java.git
+POM_SCM_DEV_CONNECTION=scm:git@github.com:mapbox/mapbox-java.git
+
+POM_LICENCE_NAME=The Apache Software License, Version 2.0
+POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
+POM_LICENCE_DIST=repo
+
+POM_DEVELOPER_ID=mapbox
+POM_DEVELOPER_NAME=Mapbox
 
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
